feat: update Swagger documentation
